# hasker

./: .env.dev  .env.prod.db.sample  .env.prod.sample  .flake8  .gitignore  Dockerfile  Dockerfile.ci  Dockerfile.prod  README.md  docker-compose.ci.yaml  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  uwsgi.ini
.github/workflows/: lint_testing.yml
api/: serializers.py  tests.py  urls.py  views.py
hasker/: settings.py  urls.py
members/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
members/migrations/: 0001_initial.py
members/templates/members/: settings.html
nginx/: nginx.conf
questions/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
questions/migrations/: 0001_initial.py
questions/templates/questions/: answer_card.html  ask.html  index.html  new_answer_email.html  pagination.html  question.html  question_card.html  question_detail_card.html  search_results.html  search_results_by_query.html  search_results_by_tag.html
templates/: base.html  form_field.html  navbar.html  trending.html
templates/admin/: base_site.html
templates/registration/: login.html  signup.html
